[package]
name = "nbt-compress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zune-inflate = { version = "0.2.54", default-features = false, features = ["gzip"] }
zopfli = { version = "0.8.0", features = ["gzip"] }
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"